--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet"><!-- //=./html/header.html
-        //=./html/main.html
-        //=./html/footer.html
-        //=./html/preloader.html
-        //=./html/toTopBtn.html
-        //=./html/cursor.html
-        //=./html/authorisation.html --><!-- Сюда будет всталена ссылка на файл скриптов --><!-- inject:js --><script src="js/scripts.js"></script><!-- endinject --></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet"> //=./html/header.html //=./html/main.html //=./html/footer.html //=./html/preloader.html //=./html/toTopBtn.html //=./html/cursor.html<!-- //=./html/authorisation.html --><!-- Сюда будет всталена ссылка на файл скриптов --><!-- inject:js --><script src="js/scripts.js"></script><!-- endinject --></body></html>
